<resources>
    <string name="app_name">MyCarrot</string>
    <string name="home">홈</string>
    <string name="chat_list">채팅</string>
    <string name="my_page">나의 정보</string>
    <string name="trade">중고 거래</string>
    <string name="need_login">로그인 후 사용해주세요</string>
    <string name="submit">등록하기</string>
    <string name="title">글 제목</string>
    <string name="price">가격</string>
    <string name="add_image">이미지 등록하기</string>
    <string name="reject_permission">권한을 거부하셨습니다.</string>
    <string name="fail_load_image">사진을 가져오지 못했습니다.</string>
    <string name="need_permission">권한이 필요합니다</string>
    <string name="need_permission_message">사진을 가져오기 위해 필요합니다</string>
    <string name="agree">동의</string>
    <string name="image_upload_fail">사진 업로드에 실패했습니다</string>
    <string name="sign_up">회원가입</string>
    <string name="login">로그인</string>
    <string name="logout">로그아웃</string>
    <string name="login_fail">로그인에 실패했습니다. 이메일 또는 비밀번호를 확인해 주세요.</string>
    <string name="login_fail_exception">로그인에 실패했습니다. 다시 시도해 주세요.</string>
    <string name="temperal_password">*********</string>
    <string name="sign_up_success">회원가입에 성공했습니다. 로그인 버튼을 눌러주세요.</string>
    <string name="sign_up_fail">회원가입에 실패했습니다. 이미 가입한 이메일일 수 있습니다.</string>
    <string name="my_item">내가 올린 아이템입니다.</string>
    <string name="chat_room_success">채팅방이 생성되었습니다. 채팅탭에서 확인해 주세요.</string>
    <string name="chat_room_list">채팅방 리스트</string>
    <string name="send">전송</string>
</resources>